--- a/Italian/main/Provision.apk/res/values-it/strings.xml
+++ b/Italian/main/Provision.apk/res/values-it/strings.xml
@@ -2,13 +2,16 @@
 <resources>
     <string name="welcome">Benvenuto</string>
     <string name="input_method_setting">Scegli tastiera</string>
-    <string name="input_method_category">"Scegli il metodo d'immissione predefinito che verrà utilizzato durante la scrittura delle email, note, e tutto il resto. Si nota che potrai installare tastiere di terze parti."</string>
-    <string name="provision_inputmethod_policy_description">"Leggi questo documento per la tastiera:"</string>
+    <string name="input_method_category">"Scegli la tastiera predefinita per la la scrittura di email, note, e tutto il resto. Successivamente potrai installare anche tastiere di terze parti."</string>
+    <string name="provision_inputmethod_policy_description">"
+Leggi questo documento per la tastiera: "</string>
     <string name="provision_inputmethod_policy_description1">Privacy</string>
     <string name="multisim_settings_title">Scheda SIM 2 rilevata</string>
     <string name="multisim_settings_category">Impostazioni preferite SIM</string>
+    <string name="page_layout_title">Layout di sistema</string>
+    <string name="page_layout_label">Regola la dimensione del testo ed il layout per della Home, pannello delle notifiche, tastierino telefono ed altro.</string>
     <string name="sim_card_detection">Nessuna scheda SIM rilevata</string>
-    <string name="sim_card_detection_info">Hai bisogno di una scheda SIM per impostare il tuo MIAccount.</string>
+    <string name="sim_card_detection_info">Hai bisogno di una scheda SIM per impostare il tuo MI Account.</string>
     <string name="sim_card_detecting">Controllo scheda SIM in corso…</string>
     <string name="other_settings">Impostazioni aggiuntive</string>
     <string name="other_settings_location">Accedi alla posizione</string>
@@ -20,9 +23,8 @@
     <string name="sim_dectection_next">Continua</string>
     <string name="shut_down">Spegni</string>
     <string name="sim_redetection">Verifica nuovamente la presenza della scheda SIM</string>
-    <string name="logo_congratulation">Hai finito!</string>
-    <string name="congratulation_label">Goditi il tuo nuovo telefono :)</string>
-    <string name="congratulation_next">Inizia a utilizzare MIUI</string>
+    <string name="title_congratulation">Sei pronto per iniziare!</string>
+    <string name="congratulation_label" />
     <string name="pref_title_voice_slot">Scheda SIM per le chiamate vocali</string>
     <string name="pref_title_data_slot">Scheda SIM per i dati</string>
     <string name="summary_not_set">Non impostato</string>
@@ -41,9 +43,11 @@ Devi accettare le Condizioni del Servizio e e i Termini sulla Privacy prima di u
     <string name="setting_locale">Impostazione PAese…</string>
     <string name="miui_terms_no_network">Nessuna connessione di rete. Leggi i Termini del Servizio su %s</string>
     <string name="miui_privacy_policy_no_network">"Nessuna connessione di rete. Leggi l'Informativa sulla Privacy su %s"</string>
-    <string name="terms_of_service">Termini del Servizio</string>
     <string name="locale_picker_title">Scegli il tuo Paese</string>
     <string name="locale_picker_desc">Se vuoi modificare il tuo Paese successivamente, dovrai ripristinare le impostazioni di fabbrica."</string>
     <string name="locale_picker_confirm_dialog_title">Scegli il tuo paese</string>
     <string name="locale_picker_confirm_dialog_desc">"Impostare %s come il tuo Paese? "</string>
+    <string name="provision_finish">OK</string>
+    <string name="provision_finish_restart">Riavvia</string>
+    <string name="install_preinstall_app">Caricamento applicazioni…</string>
 </resources>
