--- a/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
+++ b/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
@@ -237,16 +237,33 @@ Per attivare il tuo account, segui il
     <string name="wipe_data_dialog_title">"Alcuni contenuti non sono stati sincronizzati"</string>
     <string name="wipe_data_dialog_msg">%s contenuti saranno persi se prosegui.</string>
     <string name="wipe_data_dialog_msg_separator">, </string>
-    <string name="micloud_none">Nessuno</string>
+    <string name="account_none">Nessuno</string>
+    <string name="account_no_set">Nessuno</string>
+    <string name="account_none_user_name">Nessuno</string>
     <string name="micloud_user_base_info">Info utente</string>
-    <string name="micloud_user_email">E-mail</string>
-    <string name="micloud_user_phone">Telefono</string>
-    <string name="micloud_user_name">Nome utente</string>
-    <string name="micloud_user_nick_name">Nickname</string>
-    <string name="micloud_user_id">ID account Mi</string>
-    <string name="micloud_account_details">Dettagli account</string>
+    <string name="account_user_email">Email</string>
+    <string name="account_user_phone">Telefono</string>
+    <string name="account_user_name">Nome</string>
+    <string name="account_user_avatar">Immagine profilo</string>
+    <string name="account_user_gender">Genere</string>
+    <string name="account_user_gender_female">Donna</string>
+    <string name="account_user_gender_male">Uomo</string>
+    <string name="account_user_birthday">Compleanno</string>
+    <string name="account_user_id">ID Mi Account</string>
+    <string name="account_user_details">Informazioni utente</string>
+    <string name="account_user_name_dialog_title">Inserisci nome utente</string>
+    <string name="account_user_using_weibo_avatar">Usa immagine profilo di Sina Weibo</string>
+    <string name="account_user_using_qq_avatar">Usa immagine profilo di QQ</string>
+    <string name="account_user_avatar_from_camera">Scatta foto</string>
+    <string name="account_user_avatar_from_album">Scegli immagine</string>
+    <string name="photoPickerNotFoundText">Nessuna immagine disponibile.</string>
+    <string name="account_empty_user_name">Inserisci il nome utente del tuo Mi Account</string>
+    <string name="account_error_shorter_user_name">Il nome deve essere più lungo di 2 caratteri</string>
+    <string name="account_error_longer_user_name">Il nome non può superare i 20 caratteri</string>
+    <string name="account_error_user_birthday">La data di compleanno indicata non è valida</string>
+    <string name="account_crop_user_avatar">Taglia immagine</string>
     <string name="bind_settings">Account</string>
-    <string name="cloud_messaging">Messaggi Wi-Fi</string>
+    <string name="cloud_service">Mi Cloud</string>
     <string name="account_bind_settings">Collega account</string>
     <string name="account_bind_devices">Dispositivi associati</string>
     <string name="account_dspt_provision">Utilizza un solo account per tutti i nostri prodotti.</string>
@@ -296,4 +313,5 @@ Per attivare il tuo account, segui il
     <string name="no_network_btn">Aggiorna</string>
     <string name="get_device_list_failed">Impossibile recuperare i dispositivi</string>
     <string name="delete_device_failed">Impossibile rimuovere il dispositivo</string>
+    <string name="empty_device_list_notice">Nessun dispositivo</string>
 </resources>
