--- a/Italian/main/AntiSpam.apk/res/values-it/strings.xml
+++ b/Italian/main/AntiSpam.apk/res/values-it/strings.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="st_antispam_mode_smart_state">11111111</string>
+    <string name="st_antispam_mode_blacklist_state">11112121</string>
+    <string name="st_antispam_mode_only_contacts_state">11110000</string>
+    <string name="st_antispam_mode_only_whitelist_state">11000000</string>
+    <string name="st_antispam_mode_only_all_deny_state">10000000</string>
+    <string name="create_table_report_sms">create table reportSms( id TEXT NOT NULL );</string>
+    <string name="create_table_report_sms_pending">create table reportSmsPending( id TEXT NOT NULL, address TEXT, body TEXT, date TEXT );</string>
+    <string name="create_talbe_fwlog">CREATE TABLE fwlog( _id INTEGER PRIMARY KEY AUTOINCREMENT, number TEXT DEFAULT NULL, date INTEGER NOT NULL DEFAULT 0, type INTEGER NOT NULL DEFAULT 0, reason INTEGER NOT NULL DEFAULT 0, data1 TEXT DEFAULT NULL, data2 TEXT DEFAULT NULL, read INTEGER NOT NULL DEFAULT 0, simid TEXT NOT NULL DEFAULT -1, mode TEXT );</string>
+    <string name="create_table_phonelist">CREATE TABLE phone_list( _id INTEGER PRIMARY KEY AUTOINCREMENT, number TEXT DEFAULT NULL, display_number TEXT DEFAULT NULL, notes TEXT DEFAULT NULL, state INTEGER NOT NULL DEFAULT 0, isdisplay INTEGER NOT NULL DEFAULT 0, type INTEGER, cloudUid TEXT DEFAULT NULL );</string>
+    <string name="create_table_keyword">CREATE TABLE keyword( _id INTEGER PRIMARY KEY AUTOINCREMENT, data TEXT NOT NULL DEFAULT NULL, cloudUid TEXT DEFAULT NULL, type TEXT DEFAULT 0 );</string>
+    <string name="create_table_mode">CREATE TABLE mode( _id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT NOT NULL DEFAULT NULL, state TEXT NOT NULL DEFAULT NULL );</string>
+    <string name="create_table_sim">CREATE TABLE sim( _id INTEGER PRIMARY KEY AUTOINCREMENT, sim_id TEXT NOT NULL, call_wait TEXT DEFAULT -1, name TEXT DEFAULT NULL, backsound_mode TEXT DEFAULT -1 );</string>
     <string name="app_name">Guard</string>
     <string name="fw_blocked">Lista blocco</string>
     <string name="fw_blocked_count">"Bloccati "</string>
-    <string name="fw_blocked_count_call">%d chiamate</string>
-    <string name="fw_blocked_count_sms">" e %d messaggi"</string>
+    <string name="fw_blocked_join">" e "</string>
     <string name="tab_title">Lista blocco</string>
     <string name="tab_block_log">Registro</string>
     <string name="tab_blacklist">Lista blocco</string>
@@ -15,7 +26,7 @@
     <string name="bl_no_block_sms">Tutti i messaggi bloccati verranno registrati qui</string>
     <string name="bl_no_blacklist">Blacklist vuota</string>
     <string name="wl_no_whitelist">Nessun numero consentito</string>
-    <string name="APKTOOL_DUMMY_0130">false</string>
+    <string name="log_count">(%d)</string>
     <string name="tab_block_log_unKnowNumber">Numero sconosciuto</string>
     <string name="user_define_title">Personalizza</string>
     <string name="blacklist_prefix_add_hint">Aggiungi alla lista blocco tutti numeri con prefisso</string>
@@ -205,6 +216,8 @@ Aggiungi più parole separandole con la virgola."</string>
     <string name="ad_block_hint">%d bloccati</string>
     <string name="ad_single_block_hint">Bloccato</string>
     <string name="ad_permission_hint">"L'utilizzo di Ad Blocker potrebbe influire sul corretto funzionamento di alcune applicazioni."</string>
+    <string name="sms_delete_title">Rimuovi Messaggio</string>
+    <string name="call_delete_title">Rimuovi chiamata</string>
     <string name="sms_delete_hint">Eliminare tutti i messaggi bloccati inviati dai numeri selezionati?</string>
     <string name="call_delete_hint">Eliminare tutte le chiamate bloccate ricevute dai numeri selezionati?</string>
     <string name="backsound_set_hint">Impostare %s come sottofondo?</string>
@@ -276,6 +289,7 @@ Aggiungi più parole separandole con la virgola."</string>
     <string name="note_preference_delete">Modalità in uso, impossibile eliminare</string>
     <string name="block_message_number">Messaggi spam: %d</string>
     <string name="block_phone_number">Chiamate spam: %d</string>
+    <string name="info_antispam_close">AntiSpam disattivato</string>
     <string name="mark_fraud">Truffa</string>
     <string name="mark_agent">Venditore</string>
     <string name="mark_sell">Telemarketing</string>
@@ -288,8 +302,7 @@ Aggiungi più parole separandole con la virgola."</string>
     <string name="mark_meal_block">Segnalato come cibo a domicilio</string>
     <string name="mark_express_block">Segnalato come corriere</string>
     <string name="mark_banking_insurance_block">Segnalato come agente assicurativo</string>
-    <string name="mark_number_info">"
-Ricorda che a volte queste chiamate potrebbero essere utili (ad esempio se stai realmente cercando qualcosa da acquistare). Blocca soltanto i numeri da cui non vuoi mai ricevere chiamate."</string>
+    <string name="mark_number_info">Ricorda che a volte queste chiamate potrebbero essere utili (ad esempio se stai realmente cercando qualcosa da acquistare). Blocca soltanto i numeri da cui non vuoi mai ricevere chiamate.</string>
     <string name="dlg_title_not_open_stranger_identify">Attiva Identificazione numeri sconosciuti</string>
     <string name="dlg_message_not_open_stranger_identify">"Devi attivare l'Identificazione dei numeri sconosciuti in TelefonoPhone >Impostazioni, prima di segnalare un numero."</string>
     <string name="button_to_setting">Impostazioni</string>
