--- a/Italian/main/BugReport.apk/res/values-it/strings.xml
+++ b/Italian/main/BugReport.apk/res/values-it/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_label">Feedback</string>
-    <string name="report_miui">Segnala a MIUI</string>
+    <string name="app_label">Segnalazione bug</string>
+    <string name="report_miui">Segnala bug</string>
     <string name="menu_copy">Copia</string>
-    <string name="description">Descrizione (opzionale)</string>
-    <string name="suggestion_description">Spero che aggiungerete la funzione X perchè…</string>
+    <string name="description">Descrizione problema</string>
+    <string name="suggestion_description">Scrivi qui i suggerimenti</string>
     <string name="btn_send">Invia</string>
     <string name="err_type">Tipo di bug</string>
     <string name="err_type_reboot">Riavvio di sistema</string>
@@ -44,6 +44,7 @@
     <string name="toast_feedbackservice_in_submit">Invio feedback precedente…</string>
     <string name="toast_pending_log_collection">Registrazione log, si prega di attendere</string>
     <string name="toast_feedback_submitted">Il tuo feedback è stato inviato correttamente</string>
+    <string name="toast_feedback_submitting">Invio in corso…</string>
     <string name="toast_feedback_pending_wlan">Il tuo feedback sarà invato quando la conessione WLAN sarà pronta</string>
     <string name="toast_feedback_network_unavailable">Impossibile collegarsi alla rete</string>
     <string name="toast_network_unavailable">Impossibile inviare. Impossibile connettersi alla rete.</string>
@@ -57,6 +58,7 @@
     <string name="packaging_dialog_content">Generazione rapporto, si prega di attendere…</string>
     <string name="loading_apps">Creazione lista…</string>
     <string name="loading_hot_problem">Caricamento…</string>
+    <string name="loading_problem_list">Caricamento lista…</string>
     <string name="network_err">Impossibile connettersi alla rete. Controlla la tua connessione dati e prova ad aggiornare.</string>
     <string name="refresh">Aggiorna</string>
     <string name="announcement">Attenzione</string>
@@ -104,5 +106,6 @@
     <string name="bugreport_dump_start_notification_summary">Richiede circa un minuto.</string>
     <string name="bugreport_dump_complete_notification_title">Bug report creato</string>
     <string name="bugreport_dump_complete_notification_summary">Tocca per leggere.</string>
-    <string name="screen_orientation_type">1</string>
+    <string name="plus_one_submit_dialog_content">Il tuo feedback, insieme al log di errore, verrà inviato ai server Xiaomi.</string>
+    <string name="plus_one_submit_dialog_not_show_again">Ricorda la scelta</string>
 </resources>
