--- a/Italian/main/Mms.apk/res/values-it/strings.xml
+++ b/Italian/main/Mms.apk/res/values-it/strings.xml
@@ -310,6 +310,7 @@
     <string name="pref_title_delivery_reports">Rapporti consegna</string>
     <string name="pref_summary_delivery_reports">Ricezione del rapporto di consegna SMS</string>
     <string name="pref_title_ringtone_repeat">Frequenza avviso suoneria</string>
+    <string name="pref_title_ringtone_repeat_summary">Numero di notifiche riprodotte alla ricezione di un SMS a schermo spento:</string>
     <string name="pref_other_title">Altro</string>
     <string name="pref_system_title">Sistema</string>
     <string name="pref_advanced_settings_title">Impostazioni avanzate</string>
