--- a/Italian/main/NetworkAssistant2.apk/res/values-it/strings.xml
+++ b/Italian/main/NetworkAssistant2.apk/res/values-it/strings.xml
@@ -195,7 +195,7 @@ Fascia bassa: %1$s rimanenti | %2$s usati"</string>
     <string name="lock_screen_traffic_notify_body">Utilizzo dati a schermo spento: %s</string>
     <string name="lock_screen_setting_summary">Mostra un avviso dopo il consumo di 100 KB</string>
     <string name="timeshow_h_m">%1$d ore %2$d min</string>
-    <string name="timeshow_m_s">%1$d min %2$d sec/string>
+    <string name="timeshow_m_s">%1$d min %2$d sec</string>
     <string name="timeshow_s">%ds</string>
     <string name="free_time_traffic_title">Inserisci un limite fuori soglia</string>
     <string name="free_time_traffic_hint">Inserisci un limite fuori soglia</string>
