--- a/Italian/main/Email.apk/res/values-it/strings.xml
+++ b/Italian/main/Email.apk/res/values-it/strings.xml
@@ -381,7 +381,7 @@
     <string name="done_action">Fine</string>
     <string name="donot_disturb_endtime_title">A</string>
     <string name="donot_disturb_starttime_title">Da</string>
-    <string name="donot_disturb_summary">"Il tuo telefonon non riceverà e non notificherà nuove email nell'orario impostato"</string>
+    <string name="donot_disturb_summary">"Il tuo telefono non riceverà e non notificherà nuove email nell'orario impostato"</string>
     <string name="donot_disturb_title">Non disturbare di notte</string>
     <string name="downlaod_cancel_confirm_download">Annulla download</string>
     <string name="downlaod_cancel_continue_download">Annulla</string>
